[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-environment-name"
requires-python = ">=3.10"
version = "0.1.0"
description = "A real-world OpenEnv environment for RL"
dependencies = [
    "openenv",
    "numpy",
    "openai",
    "pydantic"
]

[tool.setuptools]
packages = ["."]
[project.scripts]
server = "server.app:main"
