[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-responder"
requires-python = ">=3.10"
version = "1.0.0"
description = "SRE Incident Responder environment for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openai",
    "openenv-core"
]

[tool.setuptools]
packages = ["sre_env", "server"]

[project.scripts]
server = "server.app:main"
